fix(DCOS-16363): Content in table cells overflowing

--- a/src/styles/content/tables/styles.less
+++ b/src/styles/content/tables/styles.less
@@ -106,6 +106,7 @@
     // property. http://stackoverflow.com/questions/9789723/css-text-overflow-in-a-table-cell
     max-width: 0;
     vertical-align: middle;
+    word-wrap: break-word;
 
     &.active {
       background-color: inherit;
